🏗️ Add file sending using user route

--- a/src/cli/src/.env
+++ b/src/cli/src/.env
@@ -1,4 +1,4 @@
 NAMENODE_IP="127.0.0.1"
 NAMENODE_PORT="8000"
-# 10MB
-BLOCK_SIZE="1048576"
+BLOCK_SIZE="1048576" #1 MB
+#BLOCK_SIZE="134217728" #128 MB
